--- a/i3/config
+++ b/i3/config
@@ -9,6 +9,9 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
+#GTK icons
+#gtk-icon-theme = "Numix-Circle"
+
 #for_window [class=".*'] floating enable
 focus_follows_mouse no
 set $mod Mod1
@@ -18,7 +21,7 @@ default_border pixel 0
 default_floating_border pixel 0
 
 # Window gaps
-gaps inner 20
+gaps inner 12
 gaps outer 0
 smart_gaps off
 
