--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -3,14 +3,14 @@ backend = "glx";
 vsync = true;
 
 # Transparency
-inactive-opacity = 0.9;
+inactive-opacity = 0.50;
 frame-opacity = 1.0;
 inactive-opacity-override = false;
 
 # Transparency blur
 blur-background = true;
 blur-method = "dual_kawase";
-blur-strength = 2;
+blur-strength = 3;
 
 # Fading
 fading = true;
@@ -19,7 +19,7 @@ fade-in-step = 0.03;
 fade-out-step = 0.03;
 
 # Shadows (optional)
-shadow = false;
+shadow = true;
 
 # Performance
 glx-no-stencil = true;
@@ -27,4 +27,10 @@ glx-copy-from-front = false;
 use-damage = true;
 
 # Rounded corners
-corner-radius = 12.5;
+corner-radius = 10;
+
+shadow-exclude = [
+  "name = 'Notification'",
+  "class_g = 'Tint2'", # Excludes the tint2 panel by its window class
+  # ... other exclusions
+];
